# exploading-atoms

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
src/domain/: ExploadingAtoms.cpp  ExploadingAtoms.h
src/domain/ai/: Ai.h  Minimax.cpp  Minimax.h
src/domain/models/: Coordinate.cpp  Coordinate.h  Field.cpp  Field.h  Player.h
